--- a/assets/less/components/button.less
+++ b/assets/less/components/button.less
@@ -13,7 +13,7 @@
   text-align: center;
   cursor: pointer;
   border: none;
-  background: @co-azure;
+  background: @mdc-blue-500;
   padding: 10px 20px;
   border-radius: 2px;
   text-decoration: none;
@@ -23,7 +23,7 @@
   transition: @tr-short;
 
   &:hover {
-    background: lighten( @co-azure, 5% );
+    background: @mdc-blue-400;
   }
 
   &:focus {
