--- a/assets/less/core/forms.less
+++ b/assets/less/core/forms.less
@@ -28,15 +28,15 @@ textarea {
   padding: 10px 15px;
   border: none;
   border-radius: 2px;
-  box-shadow: inset 0 0 0 1px @co-alto, inset 0 1px 3px @co-alto;
+  box-shadow: inset 0 0 0 1px @mdc-gray-300, inset 0 1px 3px @mdc-gray-300;
   transition: @tr-short;
 
   &::placeholder {
-    color: tint( @co-boulder, 50% );
+    color: tint( @mdc-gray-600, 50% );
   }
 
   &:focus {
-    box-shadow: inset 0 0 0 1px @co-azure, inset 0 1px 3px @co-alto;
+    box-shadow: inset 0 0 0 1px @mdc-blue-500, inset 0 1px 3px @mdc-gray-300;
     outline: none;
   }
 }
