--- a/assets/less/core/typography.less
+++ b/assets/less/core/typography.less
@@ -5,7 +5,9 @@
 
 body {
   font: 16px/20px @ff-main;
-  color: @co-mine-shaft;
+  color: @mdc-gray-900;
+  font-feature-settings: 'liga' 1;
+  .font-smoothing;
 }
 
 a {
