--- a/assets/less/components/brand.less
+++ b/assets/less/components/brand.less
@@ -6,7 +6,7 @@
 .brand {
   .cf;
   padding: 21px 20px 20px;
-  box-shadow: 0 1px @co-alto;
+  box-shadow: 0 1px @mdc-gray-300;
   user-select: none;
   cursor: pointer;
 
@@ -27,7 +27,7 @@
     top: 8px;
     left: -32px;
     background: white;
-    box-shadow: inset 0 0 0 1px @co-alto;
+    box-shadow: inset 0 0 0 1px @mdc-gray-300;
     border-radius: 50%;
     opacity: 0;
     transform: scale( .75 );
@@ -41,7 +41,7 @@
       width: 16px;
       height: 16px;
       border-radius: 50%;
-      background: @co-azure;
+      background: @mdc-blue-500;
     }
   }
 
