--- a/assets/less/modules/main.less
+++ b/assets/less/modules/main.less
@@ -9,6 +9,6 @@
     float: right;
     width: 100%;
     min-height: 100vh;
-    box-shadow: inset 1px 0 @co-alto;
+    box-shadow: inset 1px 0 @mdc-gray-300;
   }
 }
