--- a/assets/less/brandcolors.less
+++ b/assets/less/brandcolors.less
@@ -9,6 +9,7 @@
 @import 'library/variables';
 @import 'library/mixins';
 @import 'library/mdc';
+@import 'library/brandcolors';
 
 
 // CORE
@@ -30,4 +31,4 @@
 @import 'modules/_page';
 @import 'modules/access';
 @import 'modules/header';
-@import 'modules/main';
+@import 'modules/brands';
