--- a/assets/less/components/brand.less
+++ b/assets/less/components/brand.less
@@ -18,7 +18,7 @@
     position: relative;
   }
 
-  .brand-check {
+  .brand-dot {
     position: absolute;
     width: 24px;
     height: 24px;
@@ -58,7 +58,7 @@
   @media @mq-lg-min {
     padding: 22px 10px 20px 20px;
 
-    &.is-collected .brand-check {
+    &.is-collected .brand-dot {
       opacity: 1;
       transform: scale( 1 );
       transition: .1s;
