--- a/assets/less/components/button.less
+++ b/assets/less/components/button.less
@@ -20,7 +20,7 @@
   font-weight: bold;
   font-size: 14px;
   color: white;
-  transition: @tr-short;
+  transition: .15s;
 
   &:hover {
     background: @mdc-blue-400;
