--- a/assets/less/core/typography.less
+++ b/assets/less/core/typography.less
@@ -4,7 +4,7 @@
 
 
 body {
-  font: 16px/20px @ff-main;
+  font: 16px/20px ratio, sans-serif;
   color: @mdc-gray-900;
   font-feature-settings: 'liga' 1;
   .font-smoothing;
@@ -12,7 +12,7 @@ body {
 
 a {
   text-decoration: none;
-  transition: @tr-short;
+  transition: .15s;
 }
 
 h1 {
