--- a/assets/less/core/forms.less
+++ b/assets/less/core/forms.less
@@ -9,7 +9,7 @@ input,
 button,
 select,
 textarea {
-  font: 16px @ff-main;
+  font: 16px ratio, sans-serif;
 }
 
 
@@ -29,7 +29,7 @@ textarea {
   border: none;
   border-radius: 2px;
   box-shadow: inset 0 0 0 1px @mdc-gray-300, inset 0 1px 3px @mdc-gray-300;
-  transition: @tr-short;
+  transition: .15s;
 
   &::placeholder {
     color: tint( @mdc-gray-600, 50% );
