--- a/assets/less/brandcolors.less
+++ b/assets/less/brandcolors.less
@@ -21,14 +21,15 @@
 
 // COMPONENTS
 
-@import 'components/button';
 @import 'components/brand';
+@import 'components/button';
 @import 'components/color';
+@import 'components/fa';
 
 
 // MODULES
 
 @import 'modules/_page';
 @import 'modules/access';
-@import 'modules/header';
 @import 'modules/brands';
+@import 'modules/header';
