--- a/assets/less/components/button.less
+++ b/assets/less/components/button.less
@@ -20,7 +20,7 @@
   font-weight: bold;
   font-size: 14px;
   color: white;
-  transition: .15s;
+  transition: .1s;
 
   &:hover {
     background: @mdc-blue-400;
@@ -32,5 +32,11 @@
 }
 
 .btn-icon {
-  margin-right: 10px;
+  &.right {
+    margin-left: 10px;
+  }
+
+  &.left {
+    margin-right: 10px;
+  }
 }
