--- a/assets/less/components/color.less
+++ b/assets/less/components/color.less
@@ -4,16 +4,17 @@
 
 
 .color {
-  &.light .color-code {
-    color: @mdc-gray-900;
-  }
-
   .color-inner {
     border-radius: 2px;
+
+    &.light .color-code {
+      color: @mdc-gray-900;
+    }
   }
 
   .color-code {
-    box-shadow: none !important;
+    width: 100%;
+    height: 40px;
     background: transparent;
     text-align: center;
     color: white;
