--- a/assets/less/core/forms.less
+++ b/assets/less/core/forms.less
@@ -10,6 +10,10 @@ button,
 select,
 textarea {
   font: 16px ratio, sans-serif;
+
+  &:focus {
+    outline: none;
+  }
 }
 
 
@@ -23,38 +27,15 @@ input[type="tel"],
 input[type="text"],
 input[type="url"],
 textarea {
-  display: block;
-  width: 100%;
-  padding: 10px 15px;
+  .appearance( none );
   border: none;
-  border-radius: 2px;
-  box-shadow: inset 0 0 0 1px @mdc-gray-300, inset 0 1px 3px @mdc-gray-300;
-  transition: .15s;
+  color: @mdc-gray-600;
 
   &::placeholder {
-    color: tint( @mdc-gray-600, 50% );
-  }
-
-  &:focus {
-    box-shadow: inset 0 0 0 1px @mdc-blue-500, inset 0 1px 3px @mdc-gray-300;
-    outline: none;
+    color: @mdc-gray-400;
   }
 }
 
-input[type="email"],
-input[type="number"],
-input[type="password"],
-input[type="search"],
-input[type="tel"],
-input[type="text"],
-input[type="url"] {
-  height: 40px;
-}
-
-input[type="search"] {
-  -webkit-appearance: none;
-
-  &::-webkit-search-decoration {
-    display: none;
-  }
+input[type="search"]::-webkit-search-decoration {
+  display: none;
 }
