--- a/assets/less/modules/access.less
+++ b/assets/less/modules/access.less
@@ -5,7 +5,6 @@
 
 .access {
   .cf;
-  padding: 0 20px;
   color: @mdc-gray-600;
   position: fixed;
   right: 0;
@@ -16,15 +15,52 @@
   box-shadow: 0 1px @mdc-gray-300;
   background: fade( white, 95% );
   z-index: @zi-access;
+  user-select: none;
 
-  .collection,
-  .collection-label,
-  .collection-icon {
+  .collection-tools {
     float: left;
   }
 
+  .other-tools {
+    float: right;
+  }
+
+  .collection-tools > *,
+  .other-tools > * {
+    float: left;
+
+    + * {
+      margin-left: 1px;
+      box-shadow: -1px 0 @mdc-gray-300;
+    }
+  }
+
+  .download {
+    position: relative;
+
+    &:hover .download-label {
+      color: @mdc-gray-900;
+    }
+
+    .download-label {
+      padding: 0 40px;
+      transition: .1s;
+    }
+
+    .download-select {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+      opacity: 0;
+      cursor: pointer;
+    }
+  }
+
   .collection-icon {
-    width: 40px;
+    width: 60px;
     color: inherit;
 
     &:hover {
@@ -32,50 +68,27 @@
     }
   }
 
-  .tools {
-    float: right;
-    margin-right: -20px;
+  .collection-label {
+    padding-left: 20px;
   }
 
-  .search,
-  .download {
+  .search {
     position: relative;
-    float: left;
-    padding-left: 1px;
-    box-shadow: inset 1px 0 @mdc-gray-300;
-  }
 
-  .search-icon {
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    top: 21px;
-    left: 20px;
-  }
+    .search-icon {
+      width: 20px;
+      height: 20px;
+      position: absolute;
+      top: 21px;
+      left: 20px;
+      pointer-events: none;
+    }
 
-  .search-input {
-    padding: 20px 20px 20px 50px;
-    height: 60px;
-  }
-
-  .download:hover .download-label {
-    color: @mdc-gray-900;
-  }
-
-  .download-label {
-    padding: 0 40px;
-    transition: .1s;
-  }
-
-  .download-select {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: none;
-    opacity: 0;
-    cursor: pointer;
+    .search-input {
+      padding: 20px 20px 20px 50px;
+      height: 60px;
+      background: transparent;
+    }
   }
 
   @media @mq-sm-max {
