--- a/assets/less/modules/header.less
+++ b/assets/less/modules/header.less
@@ -6,6 +6,7 @@
 .site-header {
   padding: 20px;
   color: @mdc-gray-900;
+  user-select: none;
 
   > * + * {
     margin-top: 20px;
@@ -27,13 +28,17 @@
     color: @mdc-gray-600;
   }
 
+  .contribute {
+    font-weight: bold;
+  }
+
   .share-btns {
     font-size: 0;
   }
 
   .share-btn {
     width: 30%;
-    color: white;
+    color: white !important;
 
     &.twitter {
       background: @bc-twitter;
