--- a/assets/css/brandcolors.css
+++ b/assets/css/brandcolors.css
@@ -568,6 +568,28 @@ body {
 .site-header .share-btn + .share-btn {
   margin-left: 5%;
 }
+.site-header #carbonads {
+  padding-top: 20px;
+  font-size: 14px;
+  text-align: center;
+  box-shadow: inset 0 1px #e0e0e0;
+}
+.site-header #carbonads span,
+.site-header #carbonads a {
+  display: block;
+}
+.site-header #carbonads .carbon-img {
+  width: 130px;
+  margin: auto;
+}
+.site-header #carbonads .carbon-text {
+  margin-top: 20px;
+}
+.site-header #carbonads .carbon-poweredby {
+  margin-top: 10px;
+  font-size: 12px;
+  color: #757575;
+}
 @media screen and ( max-width: 1023px ) {
   .site-header {
     text-align: center;
@@ -586,5 +608,8 @@ body {
   }
   .site-header > * + * {
     margin-top: 40px;
+  }
+  .site-header #carbonads {
+    padding-top: 40px;
   }
 }
