--- a/assets/less/modules/header.less
+++ b/assets/less/modules/header.less
@@ -69,6 +69,33 @@
     }
   }
 
+  #carbonads {
+    padding-top: 20px;
+    font-size: 14px;
+    text-align: center;
+    box-shadow: inset 0 1px @mdc-gray-300;
+
+    span,
+    a {
+      display: block;
+    }
+
+    .carbon-img {
+      width: 130px;
+      margin: auto;
+    }
+
+    .carbon-text {
+      margin-top: 20px;
+    }
+
+    .carbon-poweredby {
+      margin-top: 10px;
+      font-size: 12px;
+      color: @mdc-gray-600;
+    }
+  }
+
   @media @mq-sm-max {
     text-align: center;
     box-shadow: 0 1px @mdc-gray-300;
@@ -86,6 +113,10 @@
 
     > * + * {
       margin-top: 40px;
+    }
+
+    #carbonads {
+      padding-top: 40px;
     }
   }
 }
