fixed desktop header

--- a/assets/css/brandcolors.css
+++ b/assets/css/brandcolors.css
@@ -601,10 +601,11 @@ body {
 }
 @media screen and ( min-width: 1024px ) {
   .site-header {
+    position: fixed;
+    top: 0;
+    left: 0;
     padding: 40px;
-    float: left;
     width: 300px;
-    margin-left: -300px;
   }
   .site-header > * + * {
     margin-top: 40px;
