--- a/assets/less/modules/header.less
+++ b/assets/less/modules/header.less
@@ -106,10 +106,11 @@
   }
 
   @media @mq-lg-min {
+    position: fixed;
+    top: 0;
+    left: 0;
     padding: 40px;
-    float: left;
     width: 300px;
-    margin-left: -300px;
 
     > * + * {
       margin-top: 40px;
