--- a/assets/styleshets/brandcolors.scss
+++ b/assets/styleshets/brandcolors.scss
@@ -113,7 +113,7 @@ $brandcolors: (
   reverbnation:      #e43526,
   rockpack:          #0ba6ab,
   roon:              #62b0d9,
-  rss-2:             #f26522,
+  rss:               #f26522,
   salesforce:        (#1798c1, #ff1100),
   samsung:           (#1428a0, #75787b, #0689d8, #ffc600, #ff6900, #e4002b, #c800a1, #685bc7, #0057b8, #00a9e0, #009ca6, #00b140),
   shopify:           (#96bf48, #479ccf, #2d3538, #f5f5f5, #f2f7fa, #666666),
